--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-REACT_APP_WEBSOCKET_URL=ws://localhost:8001
-PORT=8000
-CHOKIDAR_USEPOLLING=false
 
+PORT=8001
+CHOKIDAR_USEPOLLING=false
+REACT_APP_API_BASE_URL = https://acterview.herokuapp.com 
